--- a/sleephealth_course/sleephealth.html
+++ b/sleephealth_course/sleephealth.html
@@ -53,7 +53,7 @@
       What causes us to sleep?
 
 The interplay of two biological processes!
-<img src="/img/sfig1.jpeg" alt="bioprocesses"/>
+<img src="img/sfig1.jpeg" alt="bioprocesses"/>
 <p>
   <h4>
     Process-S:
@@ -75,8 +75,8 @@ The interplay of two biological processes!
         </h3>
   When the distance between the two curves becomes too great. 
       </p>
-      <img src="/img/sfig2.jpeg" alt="bioprocesses"/> 
-        <img src="/img/sfig3.jpeg" alt="bioprocesses"/>
+      <img src="img/sfig2.jpeg" alt="bioprocesses"/> 
+        <img src="img/sfig3.jpeg" alt="bioprocesses"/>
     </div>
 
     <div class="subview">
@@ -86,7 +86,7 @@ The interplay of two biological processes!
         </h3>
   To which of situation would the following graph fit?
       </p>
-      <img src="/img/sfig4.jpeg" alt="test"/>
+      <img src="img/sfig4.jpeg" alt="test"/>
       <div id="sleepQuiz" class="options">
         <div class="correct">Pulling an allnighter</div>
         <div>Taking a midday nap</div>
