--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 <div class="current view" id="v0">
                     <div class="subview-wrap">
                         <div class="subview">
-                            <!-- content goes here -->
+                            <img src='img/logo.svg' id="logo">
+                            <h2>I want to learn about</h2>
+                            <button onclick="mnml.switchView('pandemics')">Pandemics</button>
+                            <button onclick="mnml.switchView('sleephealth')">Sleep-Health</button>
                         </div>
                     </div>
                 </div>
