--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <link rel="stylesheet" type="text/css" href="mnml/mnml.css">
         <!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <script src="https://polyfill.io/v3/polyfill.js?features=es5,es6,es7&flags=gated"></script>
         <title>IDEA</title>
     </head>
     <body>
