fixes and tweaks

--- a/pandemics_course/pandemics.html
+++ b/pandemics_course/pandemics.html
@@ -114,8 +114,8 @@
       Next, the programme iterates through each person in the infected list. The programme keeps track of how long each individual has been in the list for, and if they have reached the closing time (the number of loops that this parameter specifies), then the programme again rolls a die, this time determining whether this individual will recover or die (move to the recovered list or the died list).
     </li>
     <li>
-      This is one loop. The programme iterates through this loop until there are no more infected people (the size of the list infected becomes zero).
-    </li>
+      This is one loop. The programme iterates through this loop for 100 days, or until only 20 people remain that are not dead / recovered.
+    </li> 
   </ol>
 </p>
     </div>
