--- a/sleephealth_course/sleephealth.html
+++ b/sleephealth_course/sleephealth.html
@@ -78,6 +78,27 @@
       </p>
     </div>
     <div class="subview">
+      <h3>Why Should We Sleep?</h3>
+      Sleep has manyfold benefits, both for your physical and mental health.
+      <ul>
+        <li>
+          Reduces risk of depression
+        </li>
+        <li>
+          Essential for memory consolidation
+        </li>
+        <li>
+          Increases alertness & concentration (which decreases other risks e.g. being involved in traffic accidents)
+        </li>
+        <li>
+          Reduces stress
+        </li>
+        <li>
+          Makes you more emotionally resilient
+        </li>
+      </ul>
+    </div>
+    <div class="subview">
       <h2>So how can we make sure we get all these benefits?</h2>
     </div>
     <div class="subview">
@@ -90,7 +111,7 @@
       </p>
       <!-- <div class="controls" id="wordControls"></div> -->
       <div id="sleepInfluenceWrap">
-        <input id="sleepInfluenceText" placeholder="what influences your sleep?"/>
+        <input id="sleepInfluenceText" placeholder="what influences your sleep?" />
         <button style="grid-area:also" onclick="addWordToList()">also</button>
       </div>
       <ul id="wordList">
@@ -117,17 +138,22 @@
     </div>
     <div class="subview" id="t2">
       <h2>Caffeine</h2>
-      <p>Caffeine helps your concentration and even increases your body's tolerance for pain. However it makes sleeping almost impossible. With a half-life-time of 3 to 5 hours caffeine stays in your body and keeps you from getting good sleep for far longer than you might expect. Avoid consuming caffeine after noon. 
+      <p>Caffeine helps your concentration and even increases your body's tolerance for pain. However it makes sleeping
+        almost impossible. With a half-life-time of 3 to 5 hours caffeine stays in your body and keeps you from getting
+        good sleep for far longer than you might expect. Avoid consuming caffeine after noon.
       </p>
     </div>
     <div class="subview">
       <h2>Establish a bedtime routine</h2>
       <p>
         What you do in the hour before bed has an enormous impact on the quality of your sleep.<br>
-        <span id="t3">Watching TV and being on your computer or phone is not a good idea. They are extremely stimulating for the brain and by that prevent winding down. They also emit blue light which puts your brain in “awake-mode”. </span>
+        <span id="t3">Watching TV and being on your computer or phone is not a good idea. They are extremely stimulating
+          for the brain and by that prevent winding down. They also emit blue light which puts your brain in
+          “awake-mode”. </span>
         Quiet activities like reading or meditation are great for getting your mind ready for sleep.
         <span id="t4"></span>
-        <br>Doing sports is a great way to exhaust yourself and clear your head before bed. However if done just before going to bed, the high body temperature will make falling asleep harder.
+        <br>Doing sports is a great way to exhaust yourself and clear your head before bed. However if done just before
+        going to bed, the high body temperature will make falling asleep harder.
       </p>
     </div>
   </div>
