--- a/sleephealth_course/sleephealth.html
+++ b/sleephealth_course/sleephealth.html
@@ -98,7 +98,7 @@
         </li>
       </ul>
     </div>
-    <div class="subview">
+    <div class="subview center">
       <h2>So how can we make sure we get all these benefits?</h2>
     </div>
     <div class="subview">
@@ -156,6 +156,11 @@
         going to bed, the high body temperature will make falling asleep harder.
       </p>
     </div>
+    <div class="subview center">
+      <h3>You've completed this course! 🎉</h3>
+      Country Roooooooads
+      <button onclick="mnml.switchView('v0')">Take Me Home</button>
+    </div>
   </div>
 </div>
 
@@ -204,12 +209,12 @@
         </ul>
       </p>
     </div>
-    <div class="subview">
+    <div class="subview center">
       <p>Let’s start with a little quiz about your sleep habits. This way we can tailor this session to your needs.
       </p>
     </div>
     <!-- populate from main.js -->
-    <div id="lastChild" class="subview">
+    <div id="lastChild" class="subview center">
       <button onclick="recordTailorResponses();mnml.switchView('sleephealth')">Back To Topic</button>
     </div>
   </div>
