--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div id="mnml">
             <header>
                 <button id="navToggle"></button>
+                <img id="icon" src="img/logo.png" onclick="trololol()">
             </header>
             <nav>
                 <div data-view="pandemics">Pandemics</div>
