--- a/pandemics_course/pandemics.html
+++ b/pandemics_course/pandemics.html
@@ -119,15 +119,15 @@
   </ol>
 </p>
     </div>
-    <div class="subview">
+    <div class="subview center">
       <div class="controls" id="pandemicSim"></div>
     </div>
-    <div class="subview">
+    <div class="subview center">
       <!--canvas for experiment-->
       <div class="canvas-wrapper" id="pModelChart"></div>
       <button id="renderCanvas" style="margin: 0 auto;">render</button>
     </div>
-    <div class="subview">
+    <div class="subview center">
       <p>
         This model, although having very little to do with the reality of outbreaks, manages to capture important principles in our understanding of pandemics. The variable we were playing with, the infection constant, can be interpreted in a general way as the ability of the virus to infect. This can either be due to the biological properties of the virus, e.g. if it is airborne, or our responses to braking the spread as much as possible e.g. quarantines, social distancing, vaccines etc. Note that in this simple model, everyone is infected. The question then becomes how does the shape of the infection’s progression look like, as that is an important factor in our healthcare system’s ability to cope with the pandemic. In the first two scenarios, there was a period where everyone was sick, that means even the doctors and nurses!
       </p>
@@ -147,6 +147,11 @@
   Radioactive decay, population growth and compound interest are all examples of exponential growth. Can you think of any more?
 </p>
 
+    </div>
+    <div class="subview center">
+      <h3>You've completed this course! 🎉</h3>
+      Country Roooooooads
+      <button onclick="mnml.switchView('v0')">Take Me Home</button>
     </div>
   </div>
 </div>
