--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <nav>
                 <div data-view="pandemics">Pandemics</div>
                 <div data-view="tailorSleep">Sleep-Health</div>
-                <a target="_blank">WhitePaper</a>
+                <a href="/whitepaper.pdf" target="_blank">WhitePaper</a>
                 <div data-view="settings">Settings</div>
             </nav>
             <main>
