--- a/pandemics_course/pandemics.html
+++ b/pandemics_course/pandemics.html
@@ -148,6 +148,23 @@
 </p>
 
     </div>
+    <div class="subview">
+      <p>
+        Check out the following articles and YouTube videos to find out more!
+      </p>
+
+<p>
+  Viruses (Britannica): <a href="https://www.britannica.com/science/virus">https://www.britannica.com/science/virus</a>
+</p>
+
+<p>
+  3Blue1Brown (Exponential growth): <a href="https://www.youtube.com/watch?v=Kas0tIxDvrg">https://www.youtube.com/watch?v=Kas0tIxDvrg</a>
+</p>
+
+<p>
+  3Blue1Brown (Simulating an Epidemic):<a href="https://www.youtube.com/watch?v=gxAaO2rsdIs"> https://www.youtube.com/watch?v=gxAaO2rsdIs</a>
+</p>
+    </div>
     <div class="subview center">
       <h3>You've completed this course! 🎉</h3>
       Country Roooooooads
